[CY-5435] Update to Vertx 4 (#59)
* Update to Vertx 4

* Update documentation

* Add assertions to AuthorisationTest

* Add DisplayName annotations

* Clean DataStorageTest

* Organize imports

* Add return to failure on wrong metadata

Before it failed the request but went on with the rest of the processing, which can result in wrong data stored in database

* Remove unused code

* Add missing documentation

* Fix PMD problems